@startuml

title __UTIL's Class Diagram__\n

  namespace  {
    namespace ss.hotelproject {
      namespace util {
        class dss.hotelproject.util.GeneratorHelper {
            {static} + generateBill()
            {static} + generateReservationCode()
        }
      }
    }
  }
  

  namespace  {
    namespace ss.hotelproject {
      namespace util {
        class dss.hotelproject.util.Triple {
            - number : Integer
            - price : Double
            + Triple()
            + Triple()
            + getNumber()
            + getPrice()
            + getRoomType()
            + getRoomTypeByMaxNumOfPerson()
            + setNumber()
            + setPrice()
            + setRoomType()
            + setRoomTypeByMaxNumOfPerson()
            + toString()
        }
      }
    }
  }
  

  dss.hotelproject.util.Triple .up.|> java.io.Serializable
  dss.hotelproject.util.Triple o-- dss.hotelproject.Enum.RoomType : roomType
  dss.hotelproject.util.Triple o-- dss.hotelproject.Enum.RoomTypeByMaxNumOfPerson : roomTypeByMaxNumOfPerson


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
